src/components/header/Header/SearchBlock.scss
@import '../../../sass_config.scss';

.search-block {
    display: none;
    margin-top: 10px;
    flex-direction: column;

    position: absolute;

    left: 50%;
    top: 0;
    right: 0;

    background-color: white;
    z-index: 999999999;
    min-height: 300px;
    max-height: 600px;
    overflow-y: auto;
    width: 50%;

    -webkit-transform: translate(-50%);
    -moz-transform: translate(-50%);
    -ms-transform: translate(-50%);
    -o-transform: translate(-50%);
    transform: translate(-50%);

    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 40px;
    border-radius: 12px;

    &__search-input-wrapper {
        display: flex;
        height: 40px;
        width: 100%;
        margin-top: 20px;
    }

    &__search-input {
        width: 100%;

        outline: none;
        border: none;

        margin-left: 10px;

        border-radius: 100px;
        padding-left: 20px;
        background-color: rgb(226, 225, 223)
    }

    &__offers {
        display: flex;
        flex-direction: column;

        margin-left: 15px;
        margin-top: 15px;
    }

    &__offers-title {
        color: grey;
        margin-bottom: 0px;
    }

    &__offer {
        display: flex;
        align-items: center;

        cursor: pointer;

        margin: 5px 0;
    }

    &__offer-img {
        width: 50px;
        height: 50px;
        object-fit: cover;

        border-radius: 100px;

        margin-right: 15px;
    }

    &__cancel-button {
        background-color: white;
        border: none;
        outline: none;
        cursor: pointer;
    }
}

